# eigentrust

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-eigentrust-demo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-eigentrust-demo/checklists/: requirements.md
specs/001-eigentrust-demo/contracts/: cli-interface.md
src/eigentrust/: __init__.py
src/eigentrust/algorithms/: convergence.py  eigentrust.py  normalization.py
src/eigentrust/cli/: main.py
src/eigentrust/domain/: __init__.py  interaction.py  peer.py  simulation.py  trust_matrix.py
src/eigentrust/simulation/: behaviors.py  interactions.py  network.py
src/eigentrust/utils/: __init__.py  io.py  logging.py
src/eigentrust/visualization/: formatters.py  graph_viz.py  matrix_viz.py
tests/integration/: test_cli_commands.py  test_full_simulation.py
tests/unit/algorithms/: test_convergence.py  test_eigentrust.py  test_normalization.py
tests/unit/domain/: test_interaction.py  test_peer.py  test_simulation.py  test_trust_matrix.py
tests/unit/simulation/: test_interactions.py  test_network.py
tests/unit/visualization/: __init__.py
