[project]
name = "eigentrust-demo"
version = "0.1.0"
description = "EigenTrust P2P trust algorithm demonstration with simulation and visualization"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "EigenTrust Team"}
]

dependencies = [
    "torch>=2.0.0",
    "typer>=0.9.0",
    "numpy>=1.24.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
scikit = ["scikit-learn>=1.3.0"]
triton = ["triton>=2.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.7.0",
    "mypy>=1.4.0",
    "ruff>=0.0.285",
]

[project.scripts]
eigentrust = "eigentrust.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage options commented out until pytest-cov is installed
# addopts = [
#     "--cov=src/eigentrust",
#     "--cov-report=html",
#     "--cov-report=term-missing",
#     "--cov-fail-under=80",
# ]

[tool.coverage.run]
branch = true
source = ["src/eigentrust"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/eigentrust"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
