[project]
name = "eigentrust-demo"
version = "0.1.0"
description = "EigenTrust P2P trust algorithm demonstration with simulation and visualization"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "EigenTrust Team"}
]

dependencies = [
    "torch>=2.0.0",
    "typer>=0.9.0",
    "numpy>=1.24.0",
    "networkx>=3.1",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
scikit = ["scikit-learn>=1.3.0"]
triton = ["triton>=2.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.7.0",
    "mypy>=1.4.0",
    "ruff>=0.0.285",
]

[project.scripts]
eigentrust = "eigentrust.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Coverage options - will be enabled separately
# addopts = [
#     "--cov=src/eigentrust",
#     "--cov-report=html",
#     "--cov-report=term-missing",
#     "--cov-fail-under=80",
# ]

[tool.coverage.run]
branch = true
source = ["src/eigentrust"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Relaxed for compatibility
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed - most functions have types but not all
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Relaxed
warn_no_return = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true  # Allow missing stubs (e.g., networkx)

[[tool.mypy.overrides]]
module = "eigentrust.domain.*"
disallow_untyped_defs = false  # Dataclasses cause issues with strict mode

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "N806",  # Variable naming for graph G (NetworkX convention)
    "N803",  # Argument naming for graph G (NetworkX convention)
    "N818",  # Exception naming (DDD domain-specific exceptions don't need Error suffix)
    "E501",  # Line too long (for readability in some cases)
]

[tool.hatch.build.targets.wheel]
packages = ["src/eigentrust"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
